--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.0",
     "jsdom": "^22.1.0",
+    "jsonwebtoken": "^9.0.2",
     "modern-react-qr-reader": "^1.0.12",
     "next": "14.0.1",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-webcam": "^7.2.0"
