--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "modern-react-qr-reader": "^1.0.12",
     "next": "14.0.1",
+    "next-auth": "^4.24.4",
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
